Fix dark mode link color for posts

--- a/web/styles/Post.module.css
+++ b/web/styles/Post.module.css
@@ -18,3 +18,7 @@
   padding: 0 4px;
   border-radius: 4px;
 }
+
+.link {
+  color: var(--boxed-text-color);
+}
